# lesfleurs

./: app.py  pyproject.toml  tailwind.config.js
entities/: location.py  plant.py
templates/: acceuil.html  sample.html
