[tool.poetry]
name = "flask-server"
version = "0.1.0"
description = ""
authors = ["Hathena <Nick1234567890a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pytz = "^2024.2"
flask-sslify = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
